<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal">
		
	<ImageView android:id="@+id/ImageViewTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/bandeau_titre"></ImageView>

	<Button android:text="@string/main_activateCT"
		android:id="@+id/ButtonActivateCT"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="30px"></Button>
		
	<TextView android:text="@string/main_interfaceType"
		android:id="@+id/TextViewInterfaceType"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20px"
		android:layout_gravity="center_horizontal"></TextView>
		
	<Spinner android:id="@+id/SpinnerInterfaces"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:prompt="@string/main_listInterfaces"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="5px"></Spinner>
		
	<Button android:text="@string/main_ButtonPerso"
		android:id="@+id/ButtonPerso"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20px"></Button>

	<ImageView android:id="@+id/ImageViewPersoTop"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/top"
		android:layout_marginTop="30px"></ImageView>
		
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="wrap_content"
		android:layout_height="180px">
		<TextView android:id="@+id/TextViewPersoHelp"
			android:text="@string/help_fullUiAcer"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center_horizontal"></TextView>
	</ScrollView>
		
	<ImageView android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/ImageViewPersoBottom"
		android:src="@drawable/bottom"></ImageView>
	
	<Button android:text="@string/main_buttonValid"
		android:id="@+id/ButtonValid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20px"></Button>
		
</LinearLayout>